Added basic trail search and adding filter by length.

--- a/BlazingTrails.Client/Features/Home/HomePage.razor
+++ b/BlazingTrails.Client/Features/Home/HomePage.razor
@@ -3,42 +3,26 @@
 
 <PageTitle>Blazing Trails</PageTitle>
 
+<TrailSearch /> 
+
 @if (_trails == null)
 {
     <p>Loading trails...</p>
 }
 else
 {
+    <TrailDetails Trail="_selectedTrail" />
     <div class="grid">
         @foreach (var trail in _trails)
         {
-            <div class="card shadow" style="width: 18rem;">
-                <img src="@trail.Image" class="card-img-top" alt="@trail.Name">
-                <div class="card-body">
-                    <h5 class="card-title">@trail.Name</h5>
-                    <h6 class="card-subtitle mb-3 text-muted">
-                        <span class="oi oi-map-marker"></span>
-                        @trail.Location
-                    </h6>
-                    <div class="d-flex justify-content-between">
-                        <span>
-                            <span class="oi oi-clock mr-2"></span>
-                            @trail.TimeFormatted
-                        </span>
-                        <span>
-                            <span class="oi oi-infinity mr-2"></span>
-                            @trail.Length km
-                        </span>
-                    </div>
-                </div>
-            </div>
+            <TrailCard Trail="trail" OnSelected="HandleTrailSelected" />
         }
     </div>
 }
 
-
 @code {
     private IEnumerable<Trail>? _trails;
+    private Trail? _selectedTrail;
 
     protected override async Task OnInitializedAsync()
     {
@@ -50,8 +34,8 @@ else
         {
             Console.WriteLine($"There was a problem loading trail data: {ex.Message}");
         }
-
     }
 
-
+    private void HandleTrailSelected(Trail trail)
+        => _selectedTrail = trail;
 }
