--- a/BlazingTrails.Client/wwwroot/css/app.css
+++ b/BlazingTrails.Client/wwwroot/css/app.css
@@ -1,4 +1,4 @@
-﻿@import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
+﻿﻿@import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
 
 :root {
     --brand: #448922;
@@ -51,6 +51,7 @@ a {
     column-gap: 123px;
     row-gap: 75px;
 }
+
 #blazor-error-ui {
     background: lightyellow;
     bottom: 0;
